add Master of Science

--- a/impressum.html
+++ b/impressum.html
@@ -4,7 +4,7 @@
 
 <h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
 <p>Tom Stein<br />
-B&ouml;rnste 108<br />
+Haverlandweg 13<br />
 48249 D&uuml;lmen</p>
 
 <h2>Kontakt</h2>
