--- a/index.html
+++ b/index.html
@@ -269,7 +269,21 @@
         <h2 class="heading">Bildung</h2>
         <div class="education-block">
             <h3>Technische Universität Dortmund</h3>
-            <span class="education-date">September 2019 - heute</span>
+            <span class="education-date">2022 - 2024</span>
+            <h4>Master of Science (M.Sc.) Informatik</h4>
+            <ul>
+                <li>
+                    Computer Vision
+                </li>
+                <li>
+                    Eingebettete Systeme
+                </li>
+            </ul>
+        </div>
+
+        <div class="education-block">
+            <h3>Technische Universität Dortmund</h3>
+            <span class="education-date">September 2019 - 2022</span>
             <h4>Bachelor of Science (B.Sc.) Informatik</h4>
             <ul>
                 <li>
