--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
             </div>
 
             <div data-date="seit Oktober 2020">
-                <h3><a href="https://www.techlabs.org/location/dortmund" target="_blank">TechLabs Mentor</a></h3>
+                <h3><a href="https://www.techlabs.org/location/ruhr" target="_blank">TechLabs Mentor</a></h3>
                 <h4>für Web Development und Data Science</h4>
                 <p>
                     Nachdem ich im Sommer 2020 selbst Techie bei TechLabs war, beteilige ich mich jetzt ehrenamtlich als Mentor 
-                    für Web Development und Data Science am Standort Dortmund. 
+                    für Web Development und Data Science am Standort Ruhr (ehemals Dortmund). 
                 </p>
                 <p style="font-size: 70%;">Verwendete Technologien: Python, TypeScript, Node.js, React</p>
             </div>
@@ -155,7 +155,7 @@
                     erstellen von Diagrammen oder statistische Analysen.
                 </p>
                 <p style="padding-left: 1em;">
-                    <a href="https://www.techlabs.org/dataScience" target="_blank">Techlabs Data Science Track</a><br>
+                    <a href="https://www.techlabs.org/data-science" target="_blank">Techlabs Data Science Track</a><br>
                 </p>
                 <p style="font-size: 70%;">Verwendete Technologien: Python, Pandas, Azure</p>
             </div>
